feat: serve resources as lists
